--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -175,7 +175,7 @@
                                         {% endif %}
                                         {% for q in line.questions %}
                                             <dt>{{ q.question }}</dt>
-                                            <dd>{% if q.answer %}{{ q.answer }}{% else %}
+                                            <dd>{% if q.answer %}{{ q.answer|linebreaks }}{% else %}
                                                 <em>{% trans "not answered" %}</em>{% endif %}</dd>
                                         {% endfor %}
                                     </dl>
