--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -91,6 +91,9 @@
                         <dt>{% trans "User" %}</dt>
                         <dd>
                             {{ order.email }}&nbsp;&nbsp;
+                            <a href="{% url "control:event.order.contact" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default btn-xs">
+                                <span class="fa fa-edit"></span>
+                            </a>
                             {% if order.status != "c" %}
                                 <form class="form-inline helper-display-inline" method="post"
                                         action="{% url "control:event.order.resendlink" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
