--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -8,6 +8,13 @@
     {% if voucher.redeemed %}
         <div class="alert alert-warning">
             {% trans "This voucher already has been used. It is not recommended to modify it." %}
+            <ul>
+            {% for op in voucher.orderposition_set.all %}
+                <li><a href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=op.order.code %}">
+                    {% blocktrans with code=op.order.code %}Order {{ code }}{% endblocktrans %}
+                </a></li>
+            {% endfor %}
+            </ul>
         </div>
     {% endif %}
     <form action="" method="post" class="form-horizontal">
