--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -12,11 +12,94 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
-            {% bootstrap_field form.mail_text_order_placed layout="horizontal" %}
-            {% bootstrap_field form.mail_text_order_paid layout="horizontal" %}
-            {% bootstrap_field form.mail_text_order_free layout="horizontal" %}
-            {% bootstrap_field form.mail_text_resend_link layout="horizontal" %}
-            {% bootstrap_field form.mail_text_order_changed layout="horizontal" %}
+            <div class="panel-group" id="questions_group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#order_placed">
+                                <strong>{% trans "Placed order" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="order_placed" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_order_placed layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#order_paid">
+                                <strong>{% trans "Paid order" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="order_paid" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_order_paid layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#order_free">
+                                <strong>{% trans "Free order" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="order_free" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_order_free layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#resend_link">
+                                <strong>{% trans "Resend link" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="resend_link" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_resend_link layout="horizontal" %}
+                            {% bootstrap_field form.mail_text_resend_all_links layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#order_changed">
+                                <strong>{% trans "Order changed" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="order_changed" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_order_changed layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#order_expirew">
+                                <strong>{% trans "Payment reminder" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="order_expirew" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_days_order_expire_warning layout="horizontal" %}
+                            {% bootstrap_field form.mail_text_order_expire_warning layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </fieldset>
         <fieldset>
             <legend>{% trans "SMTP settings" %}</legend>
