Changed order overview columns to increase usefulness

--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th>{% trans "Product" %}</th>
-                    <th>{% trans "Total orders" %}</th>
+                    <th>{% trans "Total (pending or paid)" %}</th>
                     <th>{% trans "Payment pending" %}</th>
                     <th>{% trans "Cancelled" %}</th>
                     <th>{% trans "Refunded" %}</th>
