--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_base.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_base.html
@@ -1,8 +1,10 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
+{% load static %}
 {% block title %}{% trans "Import bank data" %}{% endblock %}
 {% block content %}
     <h1>{% trans "Import bank data" %}</h1>
     {% block inner %}
     {% endblock %}
+    <script type="application/javascript" src="{% static "pretixplugins/banktransfer/ui.js" %}"></script>
 {% endblock %}
