Banktransfer: Save imported date into CharField, date format autodetection never works

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/transaction_list.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/transaction_list.html
@@ -53,7 +53,7 @@
                         </div>
                     {% endif %}
                 </td>
-                <td>{{ trans.date|date:"SHORT_DATE_FORMAT" }}</td>
+                <td>{{ trans.date }}</td>
                 <td>{{ trans.payer }}<br/>{{ trans.reference }}</td>
                 <td>{{ trans.amount|floatformat:2 }}</td>
                 <td>
