--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -203,7 +203,7 @@
                 </section>
             {% endfor %}
             {% if event.presale_is_running and display_add_to_cart %}
-                <div class="row-fluid checkout-button-row">
+                <div class="row-fluid">
                     <div class="col-md-4 col-md-offset-8 col-xs-12">
                         <button class="btn btn-block btn-primary btn-lg" type="submit">
                             <i class="fa fa-shopping-cart"></i> {% trans "Add to cart" %}
@@ -216,9 +216,9 @@
     {% endif %}
     {% if vouchers_exist %}
         <section class="front-page">
-            <h2>{% trans "Redeem a voucher" %}</h2>
+            <h3>{% trans "Redeem a voucher" %}</h3>
             <form method="get" action="{% eventurl event "presale:event.redeem" %}">
-                <div class="row-fluid">
+                <div class="row-voucher">
                     <div class="col-md-8 col-sm-6 col-xs-12">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-ticket fa-fw"></i></span>
@@ -239,13 +239,22 @@
     {% eventsignal event "pretix.presale.signals.front_page_bottom" %}
     <section class="front-page">
         <h3>{% trans "If you already ordered a ticket" %}</h3>
-        <p>
-            {% eventurl event "presale:event.resend_link" as resend_url %}
-            {% blocktrans trimmed with a_href=resend_url %}
-                If you want to see or change the status and details of your order, click on the link in one of the
-                emails we sent you during the order process. If you cannot find the link, click
-                <a href="{{ a_href }}">here</a> to request the link to your order to be sent to you again.
-            {% endblocktrans %}
-        </p>
+        <div>
+            <div class="col-md-8 col-xs-12">
+                <p>
+                    {% blocktrans trimmed %}
+                        If you want to see or change the status and details of your order, click on the link in one of the
+                        emails we sent you during the order process. If you cannot find the link, click on the
+                        following button to request the link to your order to be sent to you again.
+                    {% endblocktrans %}
+                </p>
+            </div>
+            <div class="col-md-4 col-xs-12 text-right">
+                <a class="btn btn-block btn-primary" href="{% eventurl event "presale:event.resend_link" %}">
+                    {% trans "Resend order links" %}
+                </a>
+            </div>
+            <div class="clearfix"></div>
+        </div>
     </section>
 {% endblock %}
