--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -205,7 +205,7 @@
             {% if event.presale_is_running and display_add_to_cart %}
                 <div class="row-fluid">
                     <div class="col-md-4 col-md-offset-8 col-xs-12">
-                        <button class="btn btn-block btn-primary btn-lg" type="submit">
+                        <button class="btn btn-block btn-primary btn-lg" type="submit" id="btn-add-to-cart">
                             <i class="fa fa-shopping-cart"></i> {% trans "Add to cart" %}
                         </button>
                     </div>
