--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -20,14 +20,16 @@
         <script type="text/javascript" src="{% static "jquery/js/jquery-2.1.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "js/jquery.formset.js" %}"></script>
         <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.js" %}"></script>
+        <script type="text/javascript" src="{% static "moment/moment-with-locales.min.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/asynctask.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixpresale/js/ui/cart.js" %}"></script>
     {% endcompress %}
     {{ html_head|safe }}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
-<body>
+<body data-locale="{{ request.LANGUAGE_CODE }}">
 {% block above %}
 {% endblock %}
 <div class="container">
