Minor changes in translations

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/job_detail.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/job_detail.html
@@ -8,7 +8,7 @@
                 <span class="fa big-grey-icon fa-cog fa big-rotating-icon"></span>
             </p>
             <p>
-                {% trans "The result of your import is in progress. Please be patient while we process the data..." %}
+                {% trans "The result of your import is in progress. Please be patient while we process the data…" %}
             </p>
         </div>
     {% else %}
