--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -27,6 +27,7 @@
     {% endcompress %}
     {{ html_head|safe }}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="referrer" content="origin">
     <link rel="icon" href="{% static "pretixbase/img/favicon.ico" %}">
 </head>
 <body data-locale="{{ request.LANGUAGE_CODE }}">
