--- a/src/pretix/presale/templates/pretixpresale/base_footer.html
+++ b/src/pretix/presale/templates/pretixpresale/base_footer.html
@@ -1,5 +1,7 @@
 {% load i18n %}
-{% with "href='http://pretix.eu'" as a_attr %}
+{% load safelink %}
+{% safelink "https://pretix.eu" as pretixurl %}
+{% with 'href="'|add:pretixurl|add:'"'|safe as a_attr %}
     {% blocktrans trimmed %}
         powered by <a {{ a_attr }}>pretix</a>
     {% endblocktrans %}
