--- a/src/pretix/control/templates/pretixcontrol/items/question.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question.html
@@ -2,85 +2,84 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load formset_tags %}
-{% block title %}{% trans "Question" %}{% endblock %}
+{% block title %}{% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}{% endblock %}
 {% block inside %}
-    <h1>{% trans "Question" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "General information" %}</legend>
-            {% bootstrap_field form.question layout="horizontal" %}
-            {% bootstrap_field form.type layout="horizontal" %}
-            {% bootstrap_field form.required layout="horizontal" %}
-        </fieldset>
-        <fieldset>
-            <legend>{% trans "Apply to products" %}</legend>
-            {% bootstrap_field form.items layout="horizontal" %}
-        </fieldset>
-        <div class="alert alert-info alert-required-boolean">
-            {% blocktrans trimmed %}
-                If you mark a Yes/No question as required, it means that the user has to select Yes and No is not
-                accepted. If you want to allow both options, do not make this field required.
-            {% endblocktrans %}
-        </div>
-        <fieldset id="answer-options">
-            <legend>{% trans "Answer options" %}</legend>
-            <noscript>
-                <p>{% trans "Only applicable if you choose 'Choose one/multiple from a list' above." %}</p>
-            </noscript>
-            <div class="formset" data-formset data-formset-prefix="{{ formset.prefix }}">
-                {{ formset.management_form }}
-                {% bootstrap_formset_errors formset %}
-                <div data-formset-body>
-                    {% for form in formset %}
-                        <div data-formset-form>
-                            <div class="sr-only">
-                                {{ form.id }}
-                                {% bootstrap_field form.DELETE form_group_class="" layout="inline" %}
-                            </div>
-                            <div class="row question-option-row">
-                                <div class="col-xs-10">
-                                    {% bootstrap_form_errors form %}
-                                    {% bootstrap_field form.answer layout='inline' form_group_class="" %}
-                                </div>
-                                <div class="col-xs-2 text-right">
-                                    <button type="button" class="btn btn-danger" data-formset-delete-button>
-                                        <i class="fa fa-trash"></i></button>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                <script type="form-template" data-formset-empty-form>
-                    {% escapescript %}
-                        <div data-formset-form>
-                            <div class="sr-only">
-                                {{ formset.empty_form.id }}
-                                {% bootstrap_field formset.empty_form.DELETE form_group_class="" layout="inline" %}
-                            </div>
-                            <div class="row question-option-row">
-                                <div class="col-xs-10">
-                                    {% bootstrap_field formset.empty_form.answer layout='inline' form_group_class="" %}
-                                </div>
-                                <div class="col-xs-2 text-right">
-                                    <button type="button" class="btn btn-danger" data-formset-delete-button>
-                                        <i class="fa fa-trash"></i></button>
-                                </div>
-                            </div>
-                        </div>
-                    {% endescapescript %}
-                </script>
-                <p>
-                    <button type="button" class="btn btn-default" data-formset-add>
-                        <i class="fa fa-plus"></i> {% trans "Add a new option" %}</button>
-                </p>
-            </div>
-        </fieldset>
-        <div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
-        </div>
+    <h1>
+        {% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}
+        <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
+                class="btn btn-default">
+            <span class="fa fa-edit"></span>
+            {% trans "Edit question" %}
+        </a>
+    </h1>
+    <form class="form-inline helper-display-inline" action="" method="get">
+        <p>
+            <select name="status" class="form-control">
+                <option value="">{% trans "All orders" %}</option>
+                <option value="p" {% if request.GET.status == "p" %}selected="selected"{% endif %}>{% trans "Paid" %}</option>
+                <option value="n" {% if request.GET.status == "n" %}selected="selected"{% endif %}>{% trans "Pending" %}</option>
+                <option value="o" {% if request.GET.status == "o" %}selected="selected"{% endif %}>{% trans "Pending (overdue)" %}</option>
+                <option value="e" {% if request.GET.status == "e" %}selected="selected"{% endif %}>{% trans "Expired" %}</option>
+                <option value="ne" {% if request.GET.status == "ne" %}selected="selected"{% endif %}>{% trans "Pending or expired" %}</option>
+                <option value="c" {% if request.GET.status == "c" %}selected="selected"{% endif %}>{% trans "Cancelled" %}</option>
+                <option value="r" {% if request.GET.status == "r" %}selected="selected"{% endif %}>{% trans "Refunded" %}</option>
+            </select>
+            <select name="item" class="form-control">
+                <option value="">{% trans "All products" %}</option>
+                {% for item in items %}
+                    <option value="{{ item.id }}"
+                            {% if request.GET.item|add:0 == item.id %}selected="selected"{% endif %}>
+                        {{ item.name }}
+                    </option>
+                {% endfor %}
+            </select>
+            <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
+        </p>
     </form>
+    {% if not stats %}
+        <div class="empty-collection">
+            <p>
+                {% blocktrans trimmed %}
+                    No matching answers found.
+                {% endblocktrans %}
+            </p>
+            {% if not items %}
+                <p>
+                    {% trans "You need to assign the question to a product to collect answers." %}
+                </p>
+
+                <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
+                        class="btn btn-primary btn-lg"><i class="fa fa-edit"></i> {% trans "Edit question" %}</a>
+            {% endif %}
+        </div>
+    {% else %}
+        <div class="row" id="question-stats">
+            <div class="col-md-6 col-xs-12">
+                <div class="chart" id="question_chart" data-type="{{ question.type }}">
+
+                </div>
+                <script type="application/json" id="question-chart-data">{{ stats_json|safe }}</script>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th>{% trans "Answer" %}</th>
+                        <th>{% trans "Count" %}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for stat in stats %}
+                        <tr>
+                            <td>
+                                {{ stat.answer }}
+                            </td>
+                            <td>{{ stat.count }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
