Thank-you note style fix

--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -26,6 +26,7 @@
                 Please bookmark or save the link to this exact page if you want to download your ticket or change
                 your details later. We also sent you an email containing the link to the address you specified.
             {% endblocktrans %}</p>
+            <div class="clearfix"></div>
         </div>
     {% endif %}
     <h2>
